fix travis maybe?